<resources>
    <string name="app_name">Translate</string>

    <!-- intro -->
    <string name="intro_text_primary">Translate 100+ \nLanguages Instantly</string>
    <string name="intro_text_secondary">Cross language borders with our app</string>
    <string name="intro_btn_continue">Start</string>

    <!-- translate -->
    <string name="three_dots">…</string>
    <string name="hint_translate_input">Type something…</string>
    <string name="hint_translated">Translated</string>
    <string name="btn_translate">Translate</string>
    <string name="msg_text_copied">Text copied to clipboard.</string>

    <!-- toast messages -->
    <string name="msg_something_went_wrong">Something went wrong. Try again later.</string>
    <string name="msg_same_language">You can not translate to same language.</string>
    <string name="msg_select_language">You must select language before translate.</string>
    <string name="msg_src_text_empty">You must type something to translate.</string>

    <!-- connection messages -->
    <string name="alert_dialog_title_no_internet">No Internet Connection</string>
    <string name="alert_dialog_message_no_internet">Check your internet connection.</string>
    <string name="alert_dialog_button_ok">OK</string>
    <string name="alert_dialog_button_try_again">Try Again</string>

    <!-- app unavailable -->
    <string name="alert_dialog_title_app_unavailable">Application Temporarily Unavailable</string>
    <string name="alert_dialog_message_app_unavailable">Our application is experiencing a technical issue and is currently unavailable. We are working to resolve the issue and will make it available again as soon as possible.</string>
</resources>