<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:paddingHorizontal="32dp"
        tools:context=".ui.intro.IntroFragment">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="40"
            android:src="@drawable/app_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/md_green_400"
                android:textAllCaps="true"
                android:text="@string/app_name" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="32sp"
                android:textStyle="bold"
                android:text="@string/intro_text_primary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:text="@string/intro_text_secondary" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:background="@drawable/intro_button_background"
                android:layout_marginTop="16dp"
                android:textSize="20sp"
                android:text="Continue" />
        </LinearLayout>
    </LinearLayout>
</layout>